
not yet  BJH  Release 10.72.00

              pbmtoescp2: Add -stripeheight;

              phmtoescp2: Add -resolution;

              pbmtoescp2: Add -formfeed

              pbmtoescp2: Add -raw.

              pbmtoescp2: Add -resolution=720.

              pbmtoescp2: Pad output horizontally to a multiple of 8 columns
              and vertically to a whole stripe to prevent image loss.

              pnmpad: Add -mheight, -mwidth.

              ppmtoilbm: Fix failure with -hamforce and -nocompression.
              Broken in Netpbm 9.12 (March 2001).

              makeman: fix Python syntax error.  Introduced in Netpbm 10.70
              (June 2015).

15.06.28 BJH  Release 10.71.00

              Add pamtopng.  Thanks Willem vanSchaik (willem@schaik.com).

              pnmtopng: Add -srgbintent.

              pamstereogram: Add -xbegin.  Change default to render from
              center outwards intead of from right to left, thus making the
              center of the image the crispest part.  Thanks Scott Pakin
              (scott@pakin.org).

              pamstereogram: Allow -xshift and -yshift to be negative.  Thanks
              Scott Pakin (scott@pakin.org).

              pnmpsnr: Add -rgb.

              ppmtoicr: remove -rle option.  Actually, it never worked
              because of a bug.  Now it isn't expected to.  Ppmtoicr was
              new in 1991.

              pnmtopalm: Fix arithmetic overflow with ridiculously large
              image.  Introduced after Netpbm 10.26 (January 2005) but before
              Netpbm 10.35 (August 2006).

              palmtopnm: Fix distorted output with PackBits compressed input.
              Always broken (Ability to convert PackBits input was new in
              Netpbm 10.27 (March 2005).

              pbmtoepson: fix -protocol option - never works and sometimes
              crashes program.  Always broken (-protocol was new in Netpbm
              10.23 (July 2004).
